crates/penrose_proc/tests/validate_bindings/invalid-keys-are-rejected.rs
// Bindings with invalid key names are rejected
use penrose_proc::validate_user_bindings;

fn main() {
    validate_user_bindings!(("notarealkey")());
}
